--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/marlow_atm
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.connection-timeout=30000
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+logging.level.com.zaxxer.hikari=DEBUG
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Server port (optional)
 server.port=8080
