--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-timeout=30000
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.com.zaxxer.hikari=DEBUG
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
