--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=marlow_atm
-Database connection
+
+# Database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/marlow_atm
 spring.datasource.username=root
 spring.datasource.password=admin
@@ -8,11 +9,17 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-timeout=30000
+
+# JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-logging.level.com.zaxxer.hikari=DEBUG
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Server port (optional)
+spring.jpa.properties.hibernate.connection.isolation=2 # READ_COMMITTED
+
+# Logging
+logging.level.com.zaxxer.hikari=DEBUG
+
+# Server settings
 server.port=8080
 server.address=127.0.0.1
